Archive2/c2/b52a404f3f3dd9/output
+ clang++ -std=c++11 -O0 -Wall main.cpp
main.cpp:72:22: error: no matching function for call to 'min'
            vchar += std::min(0.0, v.data[j]);
                     ^~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/algorithmfwd.h:367:5: note: candidate template ignored: deduced conflicting types for parameter '_Tp' ('double' vs. 'int')
    min(const _Tp&, const _Tp&);
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_algo.h:4249:5: note: candidate template ignored: could not match 'initializer_list<type-parameter-0-0>' against 'double'
    min(initializer_list<_Tp> __l, _Compare __comp)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/algorithmfwd.h:371:5: note: candidate function template not viable: requires 3 arguments, but 2 were provided
    min(const _Tp&, const _Tp&, _Compare);
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_algo.h:4244:5: note: candidate function template not viable: requires single argument '__l', but 2 arguments were provided
    min(initializer_list<_Tp> __l)
    ^
1 error generated.
